[project]
name = "weather-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "psycopg>=3.3.4",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "ruff>=0.15.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[tool.ruff]
line-length = 80
lint.select = ["I"]
